# wifi_csi_localization

./: README.md  model_widar3.keras  pyproject.toml
code/: dataset_.ipynb  model_train.py
docs/: ch1.md  ch10.md  ch11.md  ch2.md  ch3.md  ch4.md  ch5.md  ch6.md  ch7.md  ch8.md  ch9.md
