[project]
name = "wifi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "torch>=2.11.0",
  "torchvision>=0.26.0",
  "pandas",
  "matplotlib",
  "tensorboard",
  "torchinfo",
  "ipykernel",
  "csiread",
  "keras",
  "scipy",
  "tensorflow",
  "scikit-learn"
]
